Replace use of Collections.* by equivalent in Map.of, List.of, Set.of.